--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -109,6 +109,34 @@
   year      =  2021
 }
 
+@ARTICLE{Ballard2022-gi,
+  title     = "Bill Text and Agenda Control in the {US} Congress",
+  author    = "Ballard, A O",
+  abstract  = "The study of agenda power has largely been the study of negative
+               agenda power. But standard measures of negative agenda power are
+               insufficient to measure the majority's agenda choices: they only
+               consider a small proportion of bills, only detail how often
+               negative agenda power fails (rather than succeeds), and cannot
+               help us understand positive agenda power. To understand the
+               incentives and strategies of agenda decision-making, then, we
+               must know about members' preferences on all bills. I develop an
+               approach to estimate members' preferences on all bills, by
+               generating quantitative characterizations of the policy content
+               in each bill. I use the resulting estimates to examine both
+               positive and negative agenda power using all bills and to
+               directly compare levels of agenda power between chambers of the
+               US Congress. While I find similarly strong negative agenda
+               control in both chambers, I find substantially stronger positive
+               agenda control in the House than the Senate. \copyright{} 2021
+               Southern Political Science Association. All rights reserved.",
+  journal   = "J. Polit.",
+  publisher = "University of Chicago Press",
+  volume    =  84,
+  number    =  1,
+  pages     = "335--350",
+  year      =  2022
+}
+
 @INCOLLECTION{Baumgartner2009-eb,
   title     = "Lobbying and policy change",
   booktitle = "Lobbying and Policy Change",
@@ -308,6 +336,32 @@
   year      =  1998
 }
 
+@ARTICLE{Bussing2021-pb,
+  title     = "Majority Party Agenda Setting: Picking Fights or Avoiding Them?",
+  author    = "Bussing, A and Treul, S A",
+  abstract  = "In legislatures such as the U.S. House of Representatives, where
+               the majority party controls the agenda, the frequency of
+               observed partisan disagreement is partially a function of
+               strategic agenda-setting choices made by that party. Do majority
+               party leaders use their agenda control to privilege bills that
+               accentuate disagreements with the minority party? In this paper,
+               we develop a theoretical framework focused on the costs and
+               benefits associated with floor consideration of partisan
+               legislation. We test hypotheses derived from our theory on a
+               dataset of 15,611 bills considered in House committees during
+               the 104th--114th Congresses (1995--2016). We find that minority
+               party opposition in committee is associated with a decreased
+               likelihood of floor consideration, suggesting that the majority
+               party does not use agenda setting to indiscriminately favor
+               partisan legislation. Our findings focus attention on the costs
+               of partisan agenda setting, and contextualize the partisan
+               disagreement we ultimately observe on the House floor.
+               \copyright{} 2021 Washington University in St. Louis",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "John Wiley and Sons Inc",
+  year      =  2021
+}
+
 @ARTICLE{Clark2012-lk,
   title    = "Examining parties as procedural cartels: Evidence from the {U.S}.
               States",
@@ -364,6 +418,31 @@
   year      =  1972
 }
 
+@ARTICLE{Cox2001-eu,
+  title     = "Agenda Setting in the U. S. House: A {Majority-Party} Monopoly?",
+  author    = "Cox, Gary W",
+  abstract  = "[How strongly does the majority party control the agenda in the
+               U.S. House of Representatives? In this article, I contrast two
+               spatial models of U.S. House committees---one in which each
+               committee's agenda is set by the full committee, one in which it
+               is set by the committee's majority-party contingent. These two
+               models lead to clearly different predictions about (1) who
+               dissents on final passage votes in committee and (2) who files
+               dissents to committee bill reports. Data from the 84th through
+               the 98th Congresses gibe with the partisan model. Majority-party
+               members with a given ideological location dissent substantially
+               less often than do minority-party members with comparable
+               ideological locations. And majority-party dissent rates are
+               extremely low on an absolute scale, with over 50\% of
+               majority-party members never dissenting.]",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "[Wiley, Comparative Legislative Research Center]",
+  volume    =  26,
+  number    =  2,
+  pages     = "185--210",
+  year      =  2001
+}
+
 @BOOK{Cox2007-xq,
   title     = "Legislative Leviathan: Party Government in the House",
   author    = "Cox, Gary W and McCubbins, Mathew D",
@@ -406,6 +485,32 @@
   month     =  sep,
   year      =  2005,
   language  = "en"
+}
+
+@ARTICLE{Cox2010-gb,
+  title    = "Party power or preferences? Quasi-experimental evidence from
+              American state legislatures",
+  author   = "Cox, G W and Kousser, T and {McCubbins}",
+  abstract = "Can majority parties control legislative outcomes by controlling
+              the agenda, or are roll-call patterns simply the product of
+              legislators preferences? We argue that, holding members
+              preferences constant, the majority partys ability to set the
+              agenda gives it the power to influence legislative outcomes. We
+              present the implications of this view of party power formally and
+              then explore them empirically in two quasi-experiments from
+              American state legislatures. In both, agenda control varies while
+              legislator preferences remain constant. Our consistent finding is
+              that the majority party uses its control over the agenda to
+              screen out bills that would split its own membership, devotes
+              more floor time to bills that divide majority from minority party
+              legislators, and ultimately uses agenda control to protect the
+              policy interests of its members. \copyright{} 2010 Southern
+              Political Science Association.",
+  journal  = "J. Polit.",
+  volume   =  72,
+  number   =  3,
+  pages    = "799--811",
+  year     =  2010
 }
 
 @ARTICLE{Crosson2019-xb,
@@ -483,6 +588,61 @@
   language  = "en"
 }
 
+@ARTICLE{Finocchiaro2008-zh,
+  title     = "War for the floor: Partisan theory and agenda control in the
+               U.s. house of representatives",
+  author    = "Finocchiaro, Charles J and Rohde, David W",
+  abstract  = "This article extends recent research on partisan agenda control
+               in the U.S. House of Representatives to the issue of procedural
+               control of the legislative agenda via special rules. In
+               particular, we draw out a facet of cartel and conditional party
+               government theories that has not been addressed in prior
+               analyses: the simultaneous interrelationship between positive
+               and negative agenda control. Using roll-call data on two
+               procedural matters?votes to order the previous question on a
+               special rule and votes to adopt a special rule?over the
+               1953?2002 period, we found that, in the area of procedural
+               control of the floor agenda, the majority party's amount of
+               agenda control depends to a significant degree upon the party's
+               homogeneity and power.",
+  journal   = "Legis. Stud. Q.",
+  publisher = "Wiley",
+  volume    =  33,
+  number    =  1,
+  pages     = "35--61",
+  month     =  feb,
+  year      =  2008
+}
+
+@ARTICLE{Gailmard2007-yj,
+  title    = "Negative agenda control in the senate and house: Fingerprints of
+              majority party power",
+  author   = "Gailmard, S and Jenkins, J A",
+  abstract = "We present evidence suggesting that the majority party in the
+              U.S. Senate exercises significant negative agenda control.
+              Furthermore, this majority party negative agenda control in the
+              Senate is very similar, in empirical terms, to negative agenda
+              control exercised by the majority party in the U.S. House of
+              Representatives. This evidence comes from comparisons of majority
+              party roll rates across legislative vehicles (S bills,
+              confirmation votes, and conference reports) and across chambers
+              of Congress. Majority party roll rates respond to disagreement
+              with other political actors as if the Senate majority party does
+              restrict agenda access. Moreover, the response of majority party
+              roll rates to disagreement with other political actors is very
+              similar across the two chambers. Given that explanations of
+              majority party negative agenda control in the House are often
+              predicated on chamber-specific factors with no clear analogues in
+              the Senate, the results reveal a striking cross-chamber
+              similarity. \copyright{} 2007 Southern Political Science
+              Association.",
+  journal  = "J. Polit.",
+  volume   =  69,
+  number   =  3,
+  pages    = "689--700",
+  year     =  2007
+}
+
 @ARTICLE{Gray2019-sv,
   title     = "Pivotal Politics and the ideological content of Landmark Laws",
   author    = "Gray, T R and Jenkins, J A",
@@ -515,6 +675,29 @@
                spatial models; US Congress; legislative implementation; policy
                making; political ideology; political theory; state role;
                theoretical study; United States"
+}
+
+@ARTICLE{Hartog2008-xs,
+  title     = "The value of majority status: The effect of Jeffords's switch on
+               asset prices of republican and democratic firms",
+  author    = "Hartog, C D and Monroe, N W",
+  abstract  = "Using the change in party control of the Senate that resulted
+               from Jim Jeffords's 2001 change in party affiliation, we compare
+               competing partisan and partyless legislative theories. We offer
+               a reconceptualization of agenda control that provides a new and
+               promising basis for studying parties and policymaking in the
+               Senate. Also, we present a novel methodology-an ``event
+               study''-to test partisan and partyless hypotheses. Our results
+               show that, when Jeffords switched, the stock prices of
+               Republican-supported energy firms dropped and prices for
+               Democrat-supported firms rose, supporting the hypothesis that
+               the majority party influences Senate decisions.",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "Wiley-Blackwell",
+  volume    =  33,
+  number    =  1,
+  pages     = "63--84",
+  year      =  2008
 }
 
 @BOOK{Howlett2009-tn,
@@ -625,6 +808,21 @@
   language  = "en"
 }
 
+@MISC{Kapur2022-tg,
+  title        = "{McConnell's} support for tougher gun laws reflects a changed
+                  political landscape",
+  booktitle    = "{NBC} News",
+  author       = "Kapur, Sahil",
+  abstract     = "A decade ago, when 20 children and six adults were killed at
+                  an elementary school in Connecticut, Senate Minority Leader
+                  Mitch McConnell extended his thoughts",
+  month        =  jun,
+  year         =  2022,
+  howpublished = "\url{https://www.nbcnews.com/politics/congress/mitch-mcconnells-support-tougher-gun-laws-reflects-changed-political-l-rcna33537}",
+  note         = "Accessed: 2022-7-14",
+  language     = "en"
+}
+
 @BOOK{Kingdon1984-oq,
   title     = "Agendas, alternatives, and public policies",
   author    = "Kingdon, John W",
@@ -644,6 +842,28 @@
   address   = "London, England"
 }
 
+@BOOK{Koger2010-uc,
+  title     = "Filibustering : a political history of obstruction in the House
+               and Senate",
+  author    = "Koger, Gregory",
+  publisher = "The University of Chicago Press",
+  year      =  2010,
+  address   = "Chicago"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{Krehbiel1998-ob,
+  title     = "Pivotal politics;: a theory of {U.S}. lawmaking",
+  author    = "Krehbiel, Keith",
+  abstract  = "This book is about conflict in the executive and legislative
+               branches of government. How is such conflict resolved? Why is it
+               so often not resolved, or resolved unsatisfactorily in the eyes
+               …",
+  publisher = "University of Chicago Press",
+  year      =  1998
+}
+
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
 @INCOLLECTION{Krehbiel2010-ob,
@@ -656,6 +876,35 @@
                …",
   publisher = "University of Chicago Press",
   year      =  2010
+}
+
+@ARTICLE{Lawrence2006-ed,
+  title     = "Who wins? Party effects in legislative voting",
+  author    = "Lawrence, E D and Maltzman, F and Smith, S S",
+  abstract  = "Political scientists have long attempted to measure and describe
+               the modest and contingent effects of party on the behavior of
+               members of Congress. Recent efforts have extended the debate to
+               the more specific question of whether or not party influences
+               are sufficiently strong to move policy outcomes away from the
+               median position. In this article, we specify four theories of
+               legislative behavior. One is a preference-based, or partyless,
+               theory of behavior. This theory posits that there are no party
+               effects independent of preferences and that equilibrium outcomes
+               are located at the chamber's median. The other theories rely on
+               different conceptions of the foundations of party effects and
+               yield distinctive predictions about the legislators who will
+               support bills on final passage votes. After testing, our
+               conclusion is that strong party influences can be found in final
+               passage voting in the House: the partyless theory receives
+               little support, but a model based on majority party agenda
+               control works well. Legislative outcomes are routinely on the
+               majority party's side of the chamber median.",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "Wiley-Blackwell",
+  volume    =  31,
+  number    =  1,
+  pages     = "33--69",
+  year      =  2006
 }
 
 @ARTICLE{Layman2006-tg,
@@ -686,6 +935,34 @@
   pages     = "83--110",
   month     =  jun,
   year      =  2006
+}
+
+@ARTICLE{Magleby2018-rc,
+  title     = "Amendment Politics and Agenda Setting: A Theory with Evidence
+               from the {US} House of Representatives",
+  author    = "Magleby, D B and Monroe, N W and Robinson, G",
+  abstract  = "Much recent work on legislative policy making has focused on the
+               implications of agenda power. Yet, a critical step of the
+               legislative process-floor amendments-has been almost entirely
+               ignored in the most prominent theories of legislative decision
+               making. In this paper, we fill this gap by developing a
+               theoretical treatment of agenda setting at the amendment stage.
+               Specifically, our theoretical approach defines the relationship
+               between agenda setting at the amendment stage and outcomes at
+               final passage. We test several implications using data from the
+               US House of Representatives, and show that amendments do
+               mitigate some of the majority party's agenda setting advantage
+               by moderating initial proposals away from the majority party
+               position. However, amendments do not systematically undermine
+               the majority party's negative agenda control, as we find that
+               amendment rolls do not increase the incidence of final passage
+               rolls for the majority party. \copyright{} 2017 The Author.",
+  journal   = "Journal of Law, Economics, and Organization",
+  publisher = "Oxford University Press",
+  volume    =  34,
+  number    =  1,
+  pages     = "108--131",
+  year      =  2018
 }
 
 @BOOK{Mayhew1974-jz,
@@ -732,6 +1009,58 @@
   month     =  jan,
   year      =  2005,
   language  = "en"
+}
+
+@ARTICLE{Meagher2012-to,
+  title    = "The Effects of Party and Agenda Control: Assessing the
+              Ideological Orientation of Legislation Directing Bureaucratic
+              Behavior",
+  author   = "Meagher, E A and Vander Wielen, R J",
+  abstract = "An expansive literature examines the relationship between
+              Congress and the bureaucracy, but scholars know very little about
+              the ideological orientation of congressional influence over
+              bureaucratic institutions. In this project, the authors formally
+              examine the policy implications of various theoretical models of
+              legislative voting. They then analyze House roll call voting
+              behavior on legislation directing the Environmental Protection
+              Agency. The authors find compelling support for a model in which
+              the majority party controls the agenda and members vote according
+              to their preferences. This finding suggests that congressional
+              influence in the form of legislative directives will favor a
+              moderate faction of the majority party. \copyright{} 2012
+              University of Utah.",
+  journal  = "Polit. Res. Q.",
+  volume   =  65,
+  number   =  3,
+  pages    = "669--684",
+  year     =  2012,
+  keywords = "agenda setting; bureaucratic control; congressional parties;
+              legislative voting"
+}
+
+@ARTICLE{Patterson2020-rh,
+  title     = "Parties, agendas, and roll rates",
+  author    = "Patterson, Jr, S and Schwartz, T",
+  abstract  = "For the US House of Representatives, Cox and McCubbins discover
+               tiny majority-party roll rates and offer them as evidence of
+               majority-party agenda control. However, the observed roll rates
+               are approximately what would result from chance alone or from
+               chance constrained in several natural ways. Besides that, we
+               show that rolls themselves are not evidence of any lapse in
+               partisan agenda control and may even occur as the intended
+               consequence of agenda setting by the majority party. Innovations
+               include a solution to the combinatorial problem of counting all
+               possible rolls, the associated computations, hypothetical
+               examples of strategically advantageous self-induced rolls, and a
+               review of likely real examples of the same. \copyright{} The
+               Author(s) 2019.",
+  journal   = "J. Theor. Polit.",
+  publisher = "SAGE Publications Ltd",
+  volume    =  32,
+  number    =  2,
+  pages     = "348--359",
+  year      =  2020,
+  keywords  = "Agenda control; Hastert rule; political parties; roll rates"
 }
 
 @BOOK{Peters2010-ve,
@@ -836,6 +1165,65 @@
   year      =  2015
 }
 
+@ARTICLE{Richman2020-al,
+  title     = "When Do Low Roll Rates Indicate Party Influence? Evidence from
+               Counterfactual Roll Rates",
+  author    = "Richman, J and Roberts, R",
+  abstract  = "A simulation-based counterfactual is one way to solve the
+               observational equivalence challenge that seemingly ``partisan''
+               majority-party roll rates can be observed in the absence of any
+               actual party influence. We simulate no-partisan-agenda-control
+               counterfactual roll rates and apply them across sessions of the
+               US House of Representatives and 86 state legislative chambers to
+               evaluate the extent to which observed roll rates provide
+               evidence for party influence on the legislative agenda. After
+               assessing and controlling for the baseline risk of
+               majority-party rolls, there is significant evidence of party
+               influence on roll rates in some state legislatures, particularly
+               those with rules that grant parties more agenda power, and in
+               the post-Reed's-rules House of Representatives. Institutional
+               rules interact with the (simulated) risk of a majority roll to
+               shape observed roll rates across chambers and across time.
+               \copyright{} 2019 Washington University in St. Louis",
+  journal   = "Legislative Studies Quarterly",
+  publisher = "Wiley-Blackwell",
+  volume    =  45,
+  number    =  2,
+  pages     = "177--206",
+  year      =  2020,
+  keywords  = "conditional party government; Hastert rule; negative agenda
+               setting; observational equivalence; party leadership; roll rate"
+}
+
+@ARTICLE{Robinson2015-jd,
+  title     = "Competing agendas in theories of congress: Assessing agenda
+               control using counterfactual data",
+  author    = "Robinson, G",
+  abstract  = "In legislative studies, a ``roll rate'' refers to the proportion
+               of votes where a member or group of members is ``rolled''-
+               voting no on a measure that passes. Roll rates analysis is a
+               potentially useful tool for evaluating arguments that the
+               majority party in the House exercises influence by controlling
+               what does and does not make it onto the agenda. Despite its
+               promise, so far the use of roll rates to test these arguments
+               has faced the problem of observational equivalence-that the
+               predictions of partisan theories of agenda control are
+               indistinguishable from those of arguments that have no place for
+               parties. I address this problem by calculating party-less and
+               partisan counterfactual roll rates data to pin down the
+               predictions of these theories. This offers a powerful research
+               design to evaluate observed roll rates from sample Congresses.
+               The results provide intriguing evidence for partisan theories of
+               the House agenda. \copyright{} 2015 Southern Political Science
+               Association.",
+  journal   = "J. Polit.",
+  publisher = "University of Chicago Press",
+  volume    =  77,
+  number    =  3,
+  pages     = "749--761",
+  year      =  2015
+}
+
 @BOOK{Rohde1991-da,
   title     = "Parties and leaders in the postreform house",
   author    = "Rohde, David W",
@@ -880,6 +1268,36 @@
   year      =  1993
 }
 
+@ARTICLE{Schickler2009-bw,
+  title     = "Agenda control, majority party power, and the house committee on
+               rules, 1937-52",
+  author    = "Schickler, Eric and Pearson, Kathryn",
+  abstract  = "The role of the U.S. House Rules Committee is consequential for
+               theories of congressional parties, yet its role during the
+               ?conservative coalition? era is not well understood. We
+               systematically analyzed the politics surrounding all special
+               rules considered in Democratic Congresses from 1937 to 1952. We
+               found that Rules repeatedly used its agenda power to push to the
+               floor conservative initiatives that were opposed by the
+               Democratic administration, the Rules Committee chair, and most
+               northern Democrats, especially in Congresses that followed
+               Republican election gains. The 44 conservative initiatives we
+               identified include many of the most important policy issues
+               considered during the period. Our findings challenge the idea
+               that the majority party has consistently enjoyed a veto over
+               which initiatives reach the floor, and they underscore the
+               limits of roll-call-vote analysis in assessments of agenda
+               control.",
+  journal   = "Legis. Stud. Q.",
+  publisher = "Wiley",
+  volume    =  34,
+  number    =  4,
+  pages     = "455--491",
+  month     =  nov,
+  year      =  2009,
+  language  = "en"
+}
+
 @BOOK{Sinclair1997-jm,
   title     = "Unorthodox lawmaking: new legislative processes in the {U.S}.
                Congress",
@@ -916,6 +1334,35 @@
   month     =  jul,
   year      =  2016,
   language  = "en"
+}
+
+@ARTICLE{Stiglitz2010-zh,
+  title     = "Agenda control in congress: Evidence from cutpoint estimates and
+               ideal point uncertainty",
+  author    = "Stiglitz, Edward H and Weingast, Barry R",
+  abstract  = "This article develops two new tests of partisan and nonpartisan
+               theories of lawmaking based on cutpoint estimates and measures
+               of uncertainty about ideal point estimates. Theories of
+               congressional organization make explicit predictions about the
+               absence of cutpoints in certain intervals of the policy space.
+               We test these theories with new cutpoint estimates and exploit
+               the fact that the ideal points of members located far from the
+               density of cutpoints are necessarily estimated with less
+               precision. We validate our empirical approach through
+               simulations, and we test three models of congressional
+               organization using House roll call data from the 86th through
+               the 110th Congresses (1959?2008). We find strong evidence of
+               partisan agenda control. Our findings exhibit modest differences
+               from the results predicted by Cox and McCubbins's party cartel
+               theory: negative agenda control increases over time and is
+               negatively correlated with the size of the blockout region.",
+  journal   = "Legis. Stud. Q.",
+  publisher = "Wiley",
+  volume    =  35,
+  number    =  2,
+  pages     = "157--185",
+  month     =  may,
+  year      =  2010
 }
 
 %% 日本語文献
